# advanced-calculator

./: .coverage  .gitignore  CHANGELOG.md  MIT License  Makefile  README.md  README_EN.md  RELEASE_NOTES.md  build.py  calculator_cli.py  config.yaml  gui_calculator.py  pyproject.toml  requirements.txt  setup.py  unit_converter.py
docs/: config_example.yaml  developer_guide.md  user_guide.md
i18n/: translator.py  zh_CN.json
src/: calculator_cli.py  gui_calculator.py  history_manager.py  unit_converter.py
src/i18n/: en_US.json  translator.py  zh_CN.json
utils/: config.yaml  logger.py  version_checker.py
